--- a/ClimaTiempoReal.Frontend/index.html
+++ b/ClimaTiempoReal.Frontend/index.html
@@ -22,16 +22,16 @@
             }
 
             try {
-                const response = await fetch(`https://localhost:5001/api/clima?ciudad=${encodeURIComponent(ciudad)}`);
+                const response = await fetch(`https://localhost:5001/api/clima/${encodeURIComponent(ciudad)}`);
                 if (!response.ok) {
                     throw new Error("No se pudo obtener el clima.");
                 }
                 const data = await response.json();
                 resultado.innerHTML = `
-                        <h2>${data.ciudad}</h2>
-                        <p>Temperatura: ${data.temperatura} °C</p>
-                        <p>Descripción: ${data.descripcion}</p>
-                    `;
+                    <h2>${data.name}</h2>
+                    <p>Temperatura: ${data.main.temp} Â°C</p>
+                    <p>DescripciÃ³n: ${data.weather[0].description}</p>
+                `;
             } catch (error) {
                 resultado.innerHTML = "Error al obtener el clima.";
                 console.error(error);
