obviar este commit

--- a/ClimaTiempoReal.Frontend/index.html
+++ b/ClimaTiempoReal.Frontend/index.html
@@ -12,6 +12,7 @@
     <div id="resultado"></div>
 
     <script>
+        //eeee
         async function obtenerClima() {
             const ciudad = document.getElementById("ciudad").value;
             const resultado = document.getElementById("resultado");
