--- a/ClimaTiempoReal.Frontend/index.html
+++ b/ClimaTiempoReal.Frontend/index.html
@@ -1,43 +1,39 @@
-<!DOCTYPE html>
-<html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <title>Clima en Tiempo Real</title>
-</head>
-<body>
-    <h1>Clima en Tiempo Real</h1>
-    <input type="text" id="ciudad" placeholder="Escribe una ciudad">
-    <button onclick="obtenerClima()">Buscar</button>
+    <!DOCTYPE html>
+    <html lang="es">
+    <head>
+        <meta charset="UTF-8">
+        <title>Clima en Tiempo Real</title>
+    </head>
+    <body>
+        <h1>Clima en Tiempo Real</h1>
+        <input type="text" id="ciudad" placeholder="Escribe una ciudad">
+        <!-- <button onclick="obtenerClima()">Buscar</button> -->
+        <button onclick="obtenerPronostico()">Ver Pronóstico 5 días</button>
 
-    <div id="resultado"></div>
+        <div id="resultado"></div>
 
     <script>
-        //eeee
-        async function obtenerClima() {
-            const ciudad = document.getElementById("ciudad").value;
-            const resultado = document.getElementById("resultado");
+    async function obtenerPronostico() {
+        const ciudad = document.getElementById("ciudad").value;
+        const resultado = document.getElementById("resultado");
 
-            if (!ciudad) {
-                resultado.innerHTML = "Por favor, ingresa una ciudad.";
-                return;
-            }
+        try {
+            const response = await fetch(`https://localhost:7129/api/clima/pronostico/${ciudad}`);
+            const data = await response.json();
 
-            try {
-                const response = await fetch(`https://localhost:7129/api/clima/${ciudad}`);
-                if (!response.ok) {
-                    throw new Error("No se pudo obtener el clima.");
-                }
-                const data = await response.json();
-                resultado.innerHTML = `
-                    <h2>${data.name}</h2>
-                    <p>Temperatura: ${data.main.temp} °C</p>
-                    <p>Descripción: ${data.weather[0].description}</p>
+            let html = `<h2>Pronóstico para ${ciudad}</h2>`;
+            data.list.slice(0, 5).forEach(item => {
+                html += `
+                    <p>${item.dt_txt} → ${item.main.temp} °C, ${item.weather[0].description}</p>
                 `;
-            } catch (error) {
-                resultado.innerHTML = "Error al obtener el clima.";
-                console.error(error);
-            }
+            });
+
+            resultado.innerHTML = html;
+        } catch (error) {
+            resultado.innerHTML = "Error al obtener el pronóstico.";
+            console.error(error);
         }
+    }
     </script>
-</body>
-</html>
+    </body>
+    </html>
